--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,11 @@
         <color name="border_color">#FF5722 </color>
         <color name="hint_color">#555555 </color>
         <color name="edit_text_bg">#2D2D2D</color>
+
+    <color name="status_new">#4CAF50</color>
+    <color name="status_processing">#2196F3</color>
+    <color name="status_completed">#9C27B0</color>
+    <color name="status_cancelled">#F44336</color>
     <!-- Основные цвета для светлой темы
         <color name="background">#F5F5F5</color>
         <color name="card_background">#FFFFFF</color>
